# yebiGPT

./: pyproject.toml
yebigpt/: main.py
