[tool.poetry]
name = "yebigpt"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.216"
openai = "^0.27.8"
chromadb = "^0.3.26"
pymupdf = "^1.22.5"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
